<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/base_gap"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_gap"
        android:gravity="center"
        android:text="@string/text_contador_de_productos"
        android:textColor="@color/color_black"
        android:textSize="@dimen/medium_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/prod_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F44336"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 1"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/prod_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E91E63"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 2"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prod_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C27B0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 3"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/prod_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#673AB7"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 4"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prod_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 5"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prod_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 6"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/prod_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#009688"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 7"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prod_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 8"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prod_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#8BC34A"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Producto 9"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cont_prod9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_usuario"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_gap"
        android:hint="@string/hint_usuario" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_correo_electronio"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_gap"
        android:hint="@string/hint_usuario"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_gap"
        android:layout_marginBottom="@dimen/base_gap"
        android:text="@string/text_btn_enviar" />
</LinearLayout>